--- a/logistica_python.ipynb
+++ b/logistica_python.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Rode o notebook no Google Colab\n",
+        "Rode o notebook no Google Colab<br>",
         "<a href=\"https://colab.research.google.com/github/p-alcadi/logistica-python/blob/main/logistica_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
